<resources>
    <string name="app_name">Simple Invotry</string>
    <string name="dashboard_title">UHF RFID Tools</string>
    <string name="dashboard_subtitle">Select a function to continue</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_display">Display Settings</string>
    <string name="title_ip_or_domain">Input Domain/IP</string>
    <string name="title_ping_count">PING Count</string>
    <string name="title_ping_succ">PING Success</string>
    <string name="title_ping_fail">PING failure</string>
    <string name="title_ping_seconds"> s</string>
    <string name="title_ping_background">Background</string>
    <string name="title_ping_wait">Timeout(s)</string>
    <string name="title_ping_restart">Restart</string>
    <string name="title_ping_pingresult">Ping Result</string>
    <string name="title_ping_uploadresult">Upload Result</string>
    <string name="title_ping_downloadresult">Download Result</string>
    <string name="title_start">Start</string>
    <string name="title_stop">Stop</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_set">Settings</string>
    <string name="msg_network_none">Network unavailable</string>
    <string name="msg_network_ok">Network is connected</string>
    <string name="msg_network_unavailable">Network unavailable</string>
    <string name="msg_domain_ip_bad">Domain/IP Error</string>
    <string name="msg_loding">loading...</string>
    <string name="msg_no_data">NO DATA</string>
    <string name="msg_mac_error">ERROR</string>
    <string name="msg_mac_change">CHANGED</string>
    <string name="msg_mac_unmatched">Unmatched</string>
    <string name="app_title">AppCenter</string>
    <string name="app_msg_exit_confirm">Press again to exit the program</string>
    <string name="upload_title">Upload Tool %s</string>
    <string name="download_title">Download Tool %s</string>
    <string name="action_back">Back</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="up_one_level">..(up)</string>
    <string name="current_dir">.(refresh)</string>
    <string name="strFilePath">File Path</string>
    <string name="strBrowser">Browse</string>
    <string name="strPermissionDeny">No permission</string>
    <string name="title_activity_download">Download Tool</string>
    <string name="title_activity_upload">Upload Tool</string>
    <string name="title_Ping">Ping</string>
    <string name="title_Download">Download</string>
    <string name="title_Upload">Upload</string>
    <string name="strUpload">Upload</string>
    <string name="strUpgrade">Upgrade</string>
    <string name="title_activity_ping">PingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_ping_packet_size">Packet Size</string>
    <string name="ping_title">Ping Tool %s</string>
    <string name="yid_title">1D Barcode Tool</string>
    <string name="erd_title">2D Barcode Tool</string>
    <string name="title_activity_yi_d">1D</string>
    <string name="title_activity_er_d">2D</string>
    <string name="title_scan">Scan</string>
    <string name="title_clear">Clear</string>
    <string name="title_init_barcode">init Barcode</string>
    <string name="title_scan_between">Interval</string>
    <string name="title_work_time">Work</string>
    <string name="title_wait_time">Wait</string>
    <string name="yid_title_scan_compare">Compare</string>
    <string name="yid_title_scan_continuous">Auto,interval</string>
    <string name="yid_msg_scan_fail">Scan failure</string>
    <string name="yid_msg_scan_cancel">Scan canceled</string>
    <string name="yid_msg_scan_timeout">Scan timeout</string>
    <string name="yid_msg_scan_error">Barcode error</string>
    <string name="title_scan_count">total</string>
    <string name="title_succ_count">success</string>
    <string name="title_fail_count">failure</string>
    <string name="title_error_count">error</string>
    <string name="title_error_rate">error</string>
    <string name="title_succ_rate">success</string>
    <string name="title_fail_rate">failure</string>
    <string name="title_activity_bluetooth_print">BT Printer</string>
    <string name="title_decode_time">decode time</string>
    <string name="send">Send</string>
    <string name="Print">Print</string>
    <string name="Clear">Clear</string>
    <string name="not_connected">Please connect the bluetooth printer</string>
    <string name="bt_not_enabled_leaving">Please select a device!!</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Connected: </string>
    <string name="title_not_connected">Not connected</string>
    <string name="default_font_gray_scale">4</string>
    <string name="fontGrayscaleName">Grayscale</string>
    <string name="fontGrayScaleRange">(1~8)</string>
    <string name="PrintContent"> HELLO WORLD! \n</string>
    <string name="scanning">Scanning...</string>
    <string name="select_device">Select a device</string>
    <string name="none_paired">No Matching</string>
    <string name="none_found">Not found</string>
    <string name="title_paired_devices">Matched</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="button_scan">Scan</string>
    <string name="title_activity_uhfmain">UHF</string>
    <string name="tvInventoryName">Inventory Tag</string>
    <string name="tvCountOfTags">Total  </string>
    <string name="rbInventorySingle">Single</string>
    <string name="rbInventoryLoop">Auto</string>
    <string name="rbInventoryAnti">Anti</string>
    <string name="tvQ">Q value：</string>
    <string name="btInventory">Start</string>
    <string name="title_stop_Inventory">Stop</string>
    <string name="tvTagUii">EPC</string>
    <string name="tvTagLen">Length</string>
    <string name="tvTagCount">Count</string>
    <string name="btClear">Clear</string>
    <string name="tvTag">Tag</string>
    <string-array name="arrayAntiQ">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="arrayLF">
        <item>ID Card</item>
        <item>Animal Tag</item>
        <item>HiTag</item>
        <item>HDX Tag</item>
        <item>EM4450</item>
        <item>HID PROXIMITY</item>
    </string-array>
    <string-array name="arrayUart" translatable="false">
        <item>Barcode</item>
        <item>RFID</item>
        <item>UHF</item>
        <item>Fingerprint</item>
    </string-array>
    <string-array name="arrayCheck" translatable="false">
        <item>None</item>
        <item>Odd</item>
        <item>Even</item>
    </string-array>
    <string name="btUii">Read EPC</string>
    <string name="ckWithUii">Use EPC</string>
    <string name="tvTagUii_Read">EPC：</string>
    <string name="tvBank">Bank：</string>
    <string name="tvPtr">Ptr：</string>
    <string name="tvLen">Len：</string>
    <string name="tvAccessPwd">Access Pwd：</string>
    <string name="tvLockCode">Lock Code：</string>
    <string name="tvOption_Read">Read Mode：</string>
    <string name="ckLoop_Read">Auto</string>
    <string name="ckAnti_Read">Anti</string>
    <string name="ckSecond">Level 2 Settings</string>
    <string name="tvBank2_Read">Block：</string>
    <string name="tvPtr2_Read">Ptr：</string>
    <string name="tvLen2_Read">Len：</string>
    <string name="tvData_Read">Data：</string>
    <string name="btRead">Read</string>
    <string name="uhf_title_kill" translatable="false">Kill:</string>
    <string name="uhf_title_access" translatable="false">Access:</string>
    <string name="uhf_title_uii" translatable="false">UII:</string>
    <string name="uhf_title_tid" translatable="false">TID:</string>
    <string name="uhf_title_user" translatable="false">USER:</string>
    <string name="uhf_title_read">Read</string>
    <string name="uhf_title_write">Write</string>
    <string name="uhf_title_filter">filter</string>
    <string name="uhf_title_temp">Temporary mask</string>
    <string name="uhf_title_perm">Permanent mask</string>
    <string name="uhf_title_open">Open</string>
    <string name="uhf_title_lock">Lock</string>
    <string-array name="arrayBank">
        <item>RESERVED</item>
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="arrayReadLock">
        <item>Read</item>
        <item>Permalock</item>
    </string-array>
    <string-array name="arrayBank2">
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="arrayOption_Read">
        <item>Single</item>
        <item>Auto</item>
        <item>Anti(1 level)</item>
        <item>Anti(2 level)</item>
    </string-array>
    <string name="uhf_title_power">Output Power：</string>
    <string name="uhf_btn_setpower">Set Power</string>
    <string name="uhf_btn_workwait">Set Pwm</string>
    <string name="uhf_btn_get_workwait">Get Pwm</string>
    <string name="uhf_btn_getpower">Get Power</string>
    <string name="uhf_title_dbm">dBm</string>
    <string name="uhf_title_link">RFLink：</string>
    <string name="uhf_btn_set_link">Set Link</string>
    <string name="uhf_btn_get_link">Get Link</string>
    <string-array name="arrayPower2" translatable="false">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
    <string name="tvChooseInfo">Select UII Operation</string>
    <string name="rbRead">Read Data</string>
    <string name="rbWrite">Write Data</string>
    <string name="rbErase">Erase Data</string>
    <string name="rbLock">Lock Data</string>
    <string name="btEnter">Confirm</string>
    <string name="btCancel">Cancel</string>
    <string name="checkout_student_id">Student ID / Name</string>
    <string name="power_label">Power: %d dBm</string>
    <string name="warehouse_overview">Overview</string>
    <string name="wh_search_hint">Search by name, TID, description...</string>
    <string name="wh_filter_all">All</string>
    <string name="wh_filter_in_stock">In Stock</string>
    <string name="wh_filter_borrowed">Borrowed</string>
    <string name="wh_no_results">No matching items</string>
    <string name="wh_view_grid">Grid</string>
    <string name="wh_export">Export</string>
    <string name="br_continuous_scan">Continuous</string>
    <string name="br_stop_scan">Stop</string>
    <string name="br_filter_all">All</string>
    <string name="br_filter_in_stock">In Stock</string>
    <string name="br_filter_borrowed">Borrowed</string>
    <string name="br_filter_audited">Audited</string>
    <string name="br_filter_not_audited">Not Audited</string>
    <string name="br_bulk_all">Bulk All</string>
    <string name="br_cancel_all">Cancel All</string>
    <string name="br_scan_status_ready">Ready to scan</string>
    <string name="oplog_refresh">Refresh</string>
    <string name="oplog_wireless_view">Wireless View</string>
    <string name="oplog_hint_text">Operation logs will appear here after using app features.</string>
</resources>